# Caseus-Foratus-Helveticus

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  docker-compose.yaml
dates/: compost-dates.txt  glass-dates.txt  paper-dates.txt  trash-dates.txt
src/: lib.rs  main.rs
