[package]
name = "caseus-foratus-helveticus"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1.73"
chrono = "0.4.31"
rand = "0.8.5"
reqwest = "0.11.20"
serde_json = "1.0.107"
url = "2.4.1"